Поменял MySQL на PostgreSQL и добавил новую миграцию.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;port=3306;database=fitness_tracker_db;user=root;password=Ger31960956mexico"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=FitnessDb;Username=postgres;Password=Ger31960956"
   },
   "Logging": {
     "LogLevel": {
