--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=fitness_tracker_db;Username=postgres;Password=Ger31960956"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
